[package]
name = "masto_vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mastodon-async = { version = "1", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.34", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["full"] }
codec = "0.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fern = "0.6"
chrono = "0.4"
log = { version = "0.4", features = ["serde", "std"] }
kv-log-macro = "1.0"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
json-patch = "1.2"
voca_rs = "1.15"
textwrap = "0.16"
once_cell = "1.18"
